Fixing dropdown visibility over navbar

--- a/src/containers/Footprint/HowOftenDropdown/styles.css
+++ b/src/containers/Footprint/HowOftenDropdown/styles.css
@@ -2,6 +2,7 @@
     height: 50px;
     display: flex;
     align-items: center;
+    position: unset;
 }
 
 .dropdown-placeholder {
